--- a/configrepo/application.properties
+++ b/configrepo/application.properties
@@ -1,4 +1,4 @@
-my.greeting=hello world from repository
+my.greeting=hello world from repository new
 my.list.values=one,two,three
 db.connection={conncetionString: 'https"//abce', userName: 'Pankaj', password: 'Mehta'}
 db.port=9090
